# pytest-web3-data

./: .coverage  README.md  pyproject.toml  pytest.ini  test_example.py
.github/workflows/: test.yml
pytest_web3_data/: __about__.py  __init__.py
