[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-web3-data"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "pytest",
  "web3",
  "data",
  "ipfs",
]
authors = [
  { name = "Matt McCormick", email = "matt@mmmccormick.com" },
]
classifiers = [
  "Framework :: Pytest",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pytest",
  "urllib3",
  "py-cid",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/thewtex/pytest-web3-data#readme"
Issues = "https://github.com/thewtex/pytest-web3-data/issues"
Source = "https://github.com/thewtex/pytest-web3-data"

[project.entry-points.pytest11]
web3-data = "pytest_web3_data" 

[tool.hatch.version]
path = "pytest_web3_data/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pytest_web3_data --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "pytest_web3_data/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
